--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@babel/preset-env": "^7.7.1",
     "@babel/register": "^7.7.0",
     "chai": "^4.2.0",
+    "fs": "0.0.1-security",
     "mocha": "^6.2.2",
     "nyc": "^14.1.1"
   }
