--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "nyc mocha",
-    "start": "node index.js"
+    "test": "nyc ./node_modules/.bin/mocha --require @babel/register",
+    "start": "nodemon --exec babel-node index.js"
   },
   "repository": {
     "type": "git",
@@ -18,12 +18,17 @@
   },
   "homepage": "https://github.com/thuannhit/hotel-reservation#readme",
   "dependencies": {
+    "@babel/runtime": "^7.7.2",
+    "@babel/cli": "^7.7.0",
     "@babel/core": "^7.7.2",
+    "@babel/node": "^7.7.0",
+    "@babel/plugin-transform-runtime": "^7.6.2",
     "@babel/preset-env": "^7.7.1",
     "@babel/register": "^7.7.0",
     "chai": "^4.2.0",
     "fs": "0.0.1-security",
     "mocha": "^6.2.2",
-    "nyc": "^14.1.1"
+    "nyc": "^14.1.1",
+    "nodemon": "^1.19.4"
   }
 }
